--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,3 +2,6 @@ header.header {
     display: flex;
     justify-content: space-between;
 }
+h2.banner__heading.inline-richtext.h0 {
+    color: black;
+}
